fixed img issue, and padding on mobile about.

--- a/src/components/About/_About.scss
+++ b/src/components/About/_About.scss
@@ -17,7 +17,6 @@
     }
     .text {
       margin-bottom: 20px;
-      margin-right: 20px;
       .title {
         margin-bottom: 8px;
       }
@@ -27,6 +26,7 @@
       .info {
         margin-top: 6px;
         max-width: 500px;
+        padding: 0px 10px;
       }
     }
   }
